-
Bug
-
Resolution: Done
-
P2: Important
-
5.12.0
-
-
1fe5566c5d494a9a6cea8282c7387b36ef0e4c0b (qt/qtwebengine/5.12)
5.11.3: The method QWebEnginePage::setBackgroundColor(QColor &) sets the background across the entire page assuming the HTML document has transparent background.
5.12.0: The background color set by QWebEnginePage::setBackgroundColor(QColor&) is only visible when the view displaying the page is resized. Otherwise the background color is entirely hidden behind the HTML document.
Steps to reproduce:
- Run the project with Qt 5.12.0
- enlarge / resize the MainWindow
- relates to
-
QTBUG-81781 QWebEnginePage setBackgroundColor broken sometime after Qt 5.12.6
-
- Closed
-
-
QTBUG-67434 setBackgroundColor on QWebEnginePage dosen't seem to work consistently
-
- Closed
-
For Gerrit Dashboard: QTBUG-74519 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
256637,2 | Fix regression in setting background colors | 5.12 | qt/qtwebengine | Status: MERGED | +2 | 0 |