Fix regression in setting background colors

This logic was incorrectly stripped out in adaptations
for Chromium 68, but is still needed.

Fixes: QTBUG-74519
Change-Id: Iefe7aba352bd43148898c1abeea34f4afe354d72
Reviewed-by: Jüri Valdmann <juri.valdmann@qt.io>